# mi-par

./: .gitignore  README.md  build.gradle  dfs_solver.py  edge.py  spanning_tree.py  square_matrix.py  test_dfs_solver.py  test_spanning_tree.py  test_square_matrix.py  test_undirected_graph.py  undirected_graph.py
kgm/: __main__.py  dfs_solver.py  edge.py  spanning_tree.py  square_matrix.py  test_dfs_solver.py  test_edge.py  undirected_graph.py
mpi/: ex4.py
parallel/: CMakeLists.txt  DFSSolver.cpp  DFSSolver.h  Edge.cpp  Edge.h  Logger.cpp  Logger.h  Makefile  Packer.cpp  Packer.h  SpanningTree.cpp  SpanningTree.h  SquareMatrix.cpp  SquareMatrix.h  Token.h  UndirectedGraph.cpp  UndirectedGraph.h  main.cpp
parallel/nbproject/: Package-Default.bash  configurations.xml  project.xml
parallel/nbproject/private/: Default.properties
python/kgm/: dfs_solver.py  edge.py  spanning_tree.py  test_spanning_tree.py  test_undirected_graph.py
python/mpi/: ex5.py  ex7.py
python_parallel/kgm/: __main__.py  dfs_solver.py  edge.py  spanning_tree.py  square_matrix.py  test_dfs_solver.py  test_edge.py  test_spanning_tree.py  test_square_matrix.py  test_undirected_graph.py  undirected_graph.py
python_parallel/mpi/: ex1.py  ex2.py  ex3.py  ex8.py
report/: zprava.dvi  zprava.tex
report/data/: 1 CPU
report/fig/: parallel-35.ps  parallel-50.ps  parallel-60.ps  running-time.eps  sequential.eps  sequential.ps  speedup-35.eps  speedup-50.eps  speedup-60.eps  speedup-all.eps
report/parallel/: node0.txt  node1.txt  node12.txt  node2.txt  node7.txt  run-paralel-short-test.sh
(+257 files in other folders)
